# chat-server

./: Cargo.toml  docker-compose.yml
migrations/2023-08-23-225607_create_users/: up.sql
migrations/2023-08-28-234351_create_channels/: down.sql  up.sql
migrations/2023-08-31-231908_create_messages/: up.sql
src/: actors.rs  auth.rs  chat.rs  config.rs  controllers.rs  database.rs  main.rs  models.rs  router.rs  schema.rs  server.rs  state.rs  views.rs
src/actors/: get_initial_sync.rs  get_user_channels.rs  validate_token.rs
src/chat/: connection.rs  events.rs  server.rs
src/controllers/: channel.rs  message.rs  user.rs  websocket.rs
src/models/: channel.rs  message.rs  user.rs
src/views/: channel.rs  chat.rs  message.rs  user.rs
web/: package-lock.json  package.json  tsconfig.json
web/src/: config.ts  models.ts  provider.tsx  store.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/channels/: layout.tsx  page.tsx
web/src/app/channels/[id]/: page.tsx
web/src/app/channels/[id]/components/: ChannelMember.tsx  ChannelMemberList.tsx  Header.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  UserAvatar.tsx
web/src/app/channels/components/: ChannelItem.tsx  ChannelList.tsx  ChannelListHeader.tsx
web/src/app/components/: AuthGuard.tsx
web/src/app/login/: page.tsx
web/src/app/login/components/: LoginForm.tsx
web/src/services/: auth.service.ts  websocket.service.ts
web/src/state/: auth.ts  channels.ts  messages.ts  user.ts  users.ts
