[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
dotenvy = "0.15.7"
axum = "0.6.20"
bb8 = "0.8.1"
diesel = "2.1.0"
diesel-async = { version = "0.3.2", features = ["postgres", "bb8"] }
serde = { version = "1.0.186", features = ["derive"] }
argon2 = { version = "0.5.1", features = ["std"] }
anyhow = "1.0.75"
